# Luna3

./: .gitattributes  .gitignore  .gitlab-ci.yml  .kateproject.build.in  CHANGELOG  CMakeLists.txt  Makefile  README.md  mkzip  release.sh  update
.github/workflows/: release.yml
package/: CHANGELOG  README  README.md  README_TRANSLATIONS.md  README_TRANSLATIONS.txt  metadata.json
package/contents/code/: shadowcalcs.js
package/contents/config/: config.qml  main.xml
package/contents/po/: Messages.sh  es.po  plasma_applet_org.kde.userbase.plasma.luna3.pot  ru.po
package/contents/po/locale/es/LC_MESSAGES/: plasma_applet_org.kde.userbase.plasma.luna3.mo
package/contents/po/locale/fr/LC_MESSAGES/: plasma_applet_org.kde.userbase.plasma.luna3.mo
package/contents/po/locale/hr/LC_MESSAGES/: plasma_applet_org.kde.userbase.plasma.luna3.mo
package/contents/po/locale/nl/LC_MESSAGES/: plasma_applet_org.kde.userbase.plasma.luna3.mo
package/contents/po/locale/ru/LC_MESSAGES/: plasma_applet_org.kde.userbase.plasma.luna3.mo
package/contents/ui/: ImageChoices.qml  LunaIcon.qml  LunaWidget.qml  configGeneral.qml  configImage.qml  configPopup.qml  main.qml  shadow.qsb
package/contents/ui/code/: lunacalc.js  phases.js
package/po/: Messages.sh  plasma_applet_org.kde.userbase.plasma.luna3.pot
package/po/es/: plasma_applet_org.kde.userbase.plasma.luna3.po
package/po/fr/: plasma_applet_org.kde.userbase.plasma.luna3.po
package/po/hr/: plasma_applet_org.kde.userbase.plasma.luna3.po
package/po/nl/: plasma_applet_org.kde.userbase.plasma.luna3.po
package/po/ru/: plasma_applet_org.kde.userbase.plasma.luna3.po
po/: Messages.sh  es.po  fr.po  hr.po  nl.po  plasma_applet_org.kde.userbase.plasma.luna3.pot  ru.po
src/: CMakeLists.txt  shadow.frag
